# click

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bayesian.rs  bocpd.rs  brier.rs  clicker.rs  drag.rs  engine.rs  entropy.rs  fatigue.rs  fourier.rs  hotkey.rs  keyboard.rs  lib.rs  main.rs  montecarlo.rs  neural.rs  osha.rs  pid.rs  provenance.rs  weather.rs
src/components/: AntiDetectionPanel.tsx  Barcode.tsx  BayesianPanel.tsx  BigNumber.tsx  BocpdPanel.tsx  BrierPanel.tsx  Card.tsx  ControlPanel.tsx  CounterOverlay.tsx  CpsChart.tsx  Dashboard.tsx  EntropyGauge.tsx  FourierSpectrum.tsx  GridOverlay.tsx  HeatmapPanel.tsx  HoldDragPanel.tsx  KeyboardPanel.tsx  Mascot.tsx  MonteCarloPanel.tsx  NeuralPanel.tsx  OshaPanel.tsx  PidPanel.tsx  ProfilesPanel.tsx  ProgressRing.tsx  ProvenancePanel.tsx  SchedulePanel.tsx  SeismographPanel.tsx  SequencePanel.tsx  StatisticsPanel.tsx  StatusBadge.tsx  WeatherPanel.tsx
src/hooks/: useAnimatedNumber.ts  useMockTelemetry.ts  useTauriEngine.ts
src/lib/: format.ts
src/store/: clickStore.ts
src/styles/: global.css
